<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerInParent="false"
      android:layout_marginTop="16dp"
      android:orientation="vertical"
      >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="Please Create a New Pin Code"
        android:textAppearance="@style/TextAppearance.Title"
        android:textColor="@color/app_lightblue"
        android:textSize="18sp"
        android:textStyle="bold"
    />

    <TextView
        android:text="hint: use letters and numbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/textView10"
        android:layout_marginBottom="32dp" android:gravity="center"
        android:textColor="@color/DimGray"/>


    <EditText
        android:id="@+id/editText_pin1"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:hint="@string/pin"
        android:inputType="text|textPassword"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        />



    <EditText
        android:id="@+id/editText_pin2"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:hint="@string/repeat_pin"
        android:inputType="text|textPassword"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        />


    <Button
        android:id="@+id/btn_save_new_pin"
        android:textAppearance="@style/TextAppearance.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/xcontinue"
        android:textColor="@color/white"
        />

  </LinearLayout>

</RelativeLayout>